Fix overflow issues

--- a/main.css
+++ b/main.css
@@ -73,6 +73,7 @@
     display: flex;
     padding-left: 10vw;
     padding-right: 10vw;
+    padding-bottom: 5vh;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -218,15 +219,13 @@
 }
 
 /* Fonts */
-h1, h2 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Cabin', sans-serif;
-}
-h3, h4, h5, h6 {
-    font-family: 'Cormorant', serif;
 }
 
 p {
-    font-family: 'Hind Siliguri', sans-serif;
+    font-family: 'Palanquin', sans-serif;
+    font-size: 1.1em;
 }
 
 .center-text {
